ラベルに変更

--- a/index.html
+++ b/index.html
@@ -8,25 +8,16 @@
   </head>
   <body>
     <form action="#" method="post">
-      <P>名前</p>
-      <p>
-        <input type="text" name="name" size="40">
-      </p>
+      <label for="username">名前</label>
+      <input type="text" name="name" id="username">
 
-      <P>連絡先</p>
-      <p>
-        <input type="text" name="tel" size="40">
-      </p>
+      <label for="usertel">連絡先</label>
+      <input type="text" name="tel" id="usertel">
 
-      <P>お問い合わせ内容</p>
-      <p>
-        <textarea name="contact"></textarea>
-      </p>
-      <p>
-        <input type="submit" value="送信" class="btn">
-      </p>
+      <label for="contact">お問い合わせ内容</label>
+      <textarea name="contact" id="contact"></textarea>
+
+      <input type="submit" value="送信" class="btn">
     </form>
-
-
   </body>
 </html>
