--- a/index.html
+++ b/index.html
@@ -10,13 +10,10 @@
     <form action="#" method="post">
       <label for="username">名前</label>
       <input type="text" name="name" id="username">
-
       <label for="usertel">連絡先</label>
-      <input type="text" name="tel" id="usertel">
-
+      <input type="tel" name="tel" id="usertel">
       <label for="contact">お問い合わせ内容</label>
       <textarea name="contact" id="contact"></textarea>
-
       <input type="submit" value="送信" class="btn">
     </form>
   </body>
